# serializer version: 1
<<<<<<< HEAD
# name: test_if_comments_are_not_shown
  '''
  SELECT 1;
  +---+
  | 1 |
  |---|
  | 1 |
  +---+
  
  '''
# ---
# name: test_if_comments_flag_works
  '''
  -- this is a comment;
  SELECT 1;
  +---+
  | 1 |
  |---|
  | 1 |
  +---+
  
=======
# name: test_multi_queries_where_one_of_them_is_failing
  '''
  [
    [
      {
        "1"  :   1
      }
    ],
    [
      {
        "2"  :   2
      }
    ]
>>>>>>> main
  '''
# ---
